WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229440
Non-unified build fixes, late August 2021
https://bugs.webkit.org/show_bug.cgi?id=229440
Summary
Non-unified build fixes, late August 2021
Adrian Perez
Reported
2021-08-24 04:18:47 PDT
The end (of the summer) is coming...
Attachments
Patch
(5.54 KB, patch)
2021-08-24 04:35 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2021-08-24 04:35:27 PDT
Created
attachment 436276
[details]
Patch
EWS
Comment 2
2021-08-24 06:48:45 PDT
Committed
r281493
(
240867@main
): <
https://commits.webkit.org/240867@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436276
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-08-24 06:49:17 PDT
<
rdar://problem/82290072
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug